@@ -1,3 +1,4 @@
+* Allow to call set_lang with None and language instance
 * Add hostname configuration to list database
 * Add tree mixin
 * Rename "install-dependences" into "activate-dependencies"
